clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/borrow_with_complex_control_flow/borrow_with_complex_control_flow.cbs
// RUN: %clang_cc1 -verify %s

void use(int *_Borrow);

void test(int flag) {
  int local = 3, a = 3, b = 4;
  int *_Borrow p = &_Mut a;
  int *_Borrow q = &_Mut b;
  for (int i = 0; i < 3; ++i) {
    if (flag) {
      p = &_Mut local; // expected-error {{cannot borrow `local` as mutable more than once at a time}}
                      // expected-note@-1 {{first mut borrow occurs here}}
    } else {
      q = &_Mut local; // expected-error {{cannot borrow `local` as mutable more than once at a time}}
                      // expected-note@-1 {{first mut borrow occurs here}}
    }
    flag = ~flag;
  }
  use(p);
  use(q);
}